--- a/pages/historia.html
+++ b/pages/historia.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,400;0,700;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+     <!-- CSS only -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+     <!-- Mi CSS -->
+     <link rel="stylesheet" href="../css/styles.css">
     <title>Historia</title>
 </head>
 
 <body>
     <header>
-        <nav class="box-menu">
+        <div class="box-menu">
 
             <div class="box-social-media">
                 <ul class="subbox-social-media">
@@ -32,34 +35,40 @@
                     </li>
                 </ul>
             </div>
-
-
-            <ul class="box-navegacion">
+            
+            <div class="box-navegacion">
                 <div>
-                    <li>
-                        <img src="../img/logo.png" alt="Logo de la constructora" class="logo">
-                    </li>
+                    <a href="../index.html"><img src="../img/logo.png" alt="Logo de la constructora" class="logo"></a>
                 </div>
-                <div class="navegacion">
-                    <li>
-                        <a href="../index.html">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="historia.html">Historia</a>
-                    </li>
-                    <li>
-                        <a href="queHacemos.html">Que Hacemos</a>
-                    </li>
-                    <li>
-                        <a href="proyectos.html">Proyectos</a>
-                    </li>
-                    <li>
-                        <a href="contacto.html">Contacto</a>
-                    </li>
-                </div>
-                <i class="bi bi-list"></i>
-            </ul>
-        </nav>
+                <nav class="navbar navbar-expand-lg navegacion">
+                    <div class="container-fluid">
+                      <a class="navbar-brand enlace" href="../pages/historia.html">Historia</a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../pages/queHacemos.html">Que hacemos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../pages/proyectos.html">Proyectos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
+                          </li>
+                          
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
+            </div>
+
+        </div>
+
     </header>
 
     <main>
@@ -111,6 +120,9 @@
         </div>
     </footer>
 
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
