Actualizacion del mapa

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
         </DIV>
         <div class="box-mapa">
-            <img src="img/mapa.png" alt="mapa de la constructora" class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13522.265761160477!2d-58.92129438482591!3d-34.45958939891013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc832bc10c22fb%3A0xd31edc44a6e4f2cd!2sPilar%20Centro!5e0!3m2!1ses-419!2sar!4v1653430536665!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
         </div>
     </main>
     <footer>
