Creacion de archivos scss para todos los html, con variables y mixins

--- a/pages/queHacemos.html
+++ b/pages/queHacemos.html
@@ -12,7 +12,7 @@
      <!-- CSS only -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
      <!-- Mi CSS -->
-     <link rel="stylesheet" href="../css/styles.css">
+     <link rel="stylesheet" href="../css/main.css">
     <title>Que Hacemos</title>
 </head>
 
@@ -74,12 +74,12 @@
             <h1 class="titulo">Que Hacemos</h1>
         </div>
 
-        <div class="box-como-construimos">
+        <div class="box-flex-colu-centr">
             <div>
-                <h2 class="como-construimos-titulo">Como construimos</h2>
+                <h2 class="sub-titulo">Como construimos</h2>
             </div>
 
-            <div class="box-como-construimos-parrafo">
+            <div class="box-parrafo-subtitulo">
                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam neque dolorem totam omnis hic illum ducimus aspernatur praesentium dolorum, suscipit, assumenda nobis enim autem quibusdam sunt quis itaque id accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime cumque recusandae ratione culpa fugiat inventore eligendi consectetur, reiciendis tempore repellat quam quas delectus explicabo minima vero! Reprehenderit explicabo vel consectetur. 
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia cum eaque laudantium odio impedit alias, ea hic soluta incidunt, fugit voluptatibus! Nemo incidunt, quo possimus delectus corrupti similique quod numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laudantium fugiat vel, excepturi repudiandae sit nostrum hic alias. Eum sunt eius assumenda ut, accusamus quidem quibusdam excepturi eveniet eos quis!</p>
             </div>
