Se agrego como extend de sass el fondo principal de todas las paginas y se cambiaron los lorems

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
             <div class="box-social-media">
                 <ul class="subbox-social-media">
-                    <li><a href=""><i class="bi bi-instagram"></i></a></li>
-                    <li><a href=""><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="https://es-la.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a></li>
                 </ul>
 
                 <ul class="subbox-social-media">
@@ -76,7 +76,7 @@
                 <h1 class="titulo">LIDERES EN CONTRUCCION</h1>
                 <div class="box-quienesSomos">
                     <h2 class="quienesSomos">Quienes Somos</h2>
-                    <p class="parrafo-titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci perspiciatis praesentium aliquam ipsam dolorum, voluptatem magnam corrupti accusamus sit esse. Nemo numquam eum doloribus! Obcaecati repellat non tempora possimus ea!</p>
+                    <p class="parrafo-titulo">Somos una empresa constructora de sólida trayectoria y experiencia, con un equipo profesional plenamente comprometido con el cumplimiento y capaz de brindar múltiples soluciones en forma rápida, creativa y eficaz. Nuestro esfuerzo se refleja en obras, tanto privadas como públicas, que mejoran la calidad de vida de las personas y agregan valor a nuestros clientes.</p>
                 </div>
             </div>
         </div>
@@ -109,10 +109,10 @@
     <footer>
         <div class="box-menu-footer">
             <ul class="redes-sociales-footer">
-                <li><a href=""><i class="bi bi-instagram"></i></a></li>
-                <li><a href=""><i class="bi bi-facebook"></i></a></li>
-                <li><a href=""><i class="bi bi-whatsapp"></i></a></li>
-                <li><a href=""><i class="bi bi-envelope-fill"></i></a></li>
+                <li><a href="https://www.instagram.com/"target="_blank"><i class="bi bi-instagram"></i></a></li>
+                <li><a href="https://es-la.facebook.com/"target="_blank"><i class="bi bi-facebook"></i></a></li>
+                <li><a href="https://www.whatsapp.com/?lang=es"target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+                <li><a href="https://outlook.live.com/owa/"target="_blank"><i class="bi bi-envelope-fill"></i></a></li>
             </ul>
         </div>
         <div class="box-copyright">
