--- a/pages/historia.html
+++ b/pages/historia.html
@@ -79,15 +79,16 @@
         <div class="box-historia">
             <div class="box-parrafo-uno">
                 <h2>Historia</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam aliquam debitis cumque fugit eligendi veniam non error dicta odit laudantium quas velit eius ex, sit aperiam nulla soluta vel natus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem vel sunt enim inventore dolores quis numquam, deserunt ea officia doloribus illum perspiciatis temporibus. Unde necessitatibus tenetur voluptatum deleniti exercitationem nisi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Molestiae, harum esse. Doloremque blanditiis nihil nam inventore dolorem odio quidem dolore vel nesciunt quibusdam ullam repellendus, recusandae beatae vitae eius sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem explicabo expedita, dolores, corporis eaque asperiores tempora voluptas dolorum quaerat fugiat hic eos fugit quasi minus quod aut pariatur nemo perspiciatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque officia explicabo accusamus suscipit, modi provident ducimus qui iure! Totam minus nostrum iste harum temporibus, explicabo quibusdam deserunt at quisquam ipsam.
-                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis in fuga molestiae explicabo obcaecati culpa, mollitia nesciunt vel cum veniam officia perspiciatis placeat esse tenetur assumenda iste, a corporis impedit.</p>
+                <p> Nuestra historia se origina con Amadeo Ángel Cuarzo, prestigioso ingeniero que fue distinguido con medalla de oro por la Universidad de Buenos Aires, y fundó Gilardón Córdoba y Cuarzo. Su hijo, Amadeo Cuarzo, hereda la visión y los sueños de su padre, y en 1968 funda Cuarzo en la Ciudad de Buenos Aires. Desde sus inicios, Cuarzo se basó en los valores del trabajo en equipo y del desarrollo continuo, y en sus primeros años centró su actividad en la construcción de obras civiles.
+                    Luego de una década construyendo en la Ciudad de Buenos Aires, en 1978, Cuarzo inaugura su trabajo en el interior del país, con la construcción de viviendas, escuelas, centros de salud y edificios públicos en la Patagonia. Sin dudas, la década de los 80 significó una etapa de gran avance para Cuarzo, ya que en ese período construyó más de 8 mil viviendas. En esos años, además, se llevaron a cabo obras muy importantes como simuladores de vuelo para Aerolíneas Argentinas, el supermercado Carrefour de Avenida La Plata, complejos poliderpotivos, embajadas, bancos, hoteles, entre otros. Durante esta década, Cuarzo se consolidó como un actor fundamental en la construcción de obra pública. </p>
             </div>
             <div class="box-imagen-historia">
                 <img class="box-imagen" src="../img/boss.jpeg" alt="imagen de los dueños">
             </div>
             <div class="box-parrafo-dos">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non illum temporibus delectus unde perferendis rerum id soluta molestiae eaque labore velit quod, doloremque ex maxime aspernatur suscipit deleniti. Quaerat, tenetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi corrupti commodi ipsam rem assumenda, at, soluta odit obcaecati omnis consequuntur dicta nobis laboriosam eius molestias magni possimus autem est nemo Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae distinctio fuga, blanditiis nisi tenetur sunt accusantium ducimus officia, possimus consequuntur, voluptates esse aperiam dolore. Libero aliquam voluptatum quo ducimus officiis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quisquam modi quae voluptatem. Aspernatur consequuntur doloribus optio deserunt, alias voluptas sit excepturi expedita veritatis dolores dolor blanditiis quis reprehenderit culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus voluptas perspiciatis cupiditate, blanditiis sed asperiores vero nesciunt? A, illum. Nisi, quam animi neque assumenda cum blanditiis asperiores sed. Officiis, obcaecati.</p>
+                <p>La década de 1990 evidencia el fortalecimiento institucional de Cuarzo, con el desarrollo de proyectos inmobiliarios y el incremento notable de obras en ejecución, contratos y adjudicaciones de grandes emprendimientos. Dentro de este período, se concretaron proyectos como la construcción de varias torres en Capital Federal, el Club Atlético Boca Juniors, numerosos hipermercados, La Rural, etc. El comienzo del nuevo milenio significó para Cuarzo el traspaso de las fronteras nacionales y su consolidación como empresa internacional. Se creó la Dirección Internacional y se capacitó a más personal profesional y técnico de distintos rubros, iniciando actividades comerciales en distintos puntos de Latinoamérica.
+
+                    En los últimos años Cuarzo se consolidó como empresa constructora internacional, realizando importantes obras en Buenos Aires y en el interior del país, así como en Perú y Panamá.</p>
             </div>
             
         </div>
@@ -100,10 +101,10 @@
     <footer>
         <div class="box-menu-footer">
             <ul class="redes-sociales-footer">
-                <li><a href=""><i class="bi bi-instagram"></i></a></li>
-                <li><a href=""><i class="bi bi-facebook"></i></a></li>
-                <li><a href=""><i class="bi bi-whatsapp"></i></a></li>
-                <li><a href=""><i class="bi bi-envelope-fill"></i></a></li>
+                <li><a href="https://www.instagram.com/"target="_blank"><i class="bi bi-instagram"></i></a></li>
+                <li><a href="https://es-la.facebook.com/"target="_blank"><i class="bi bi-facebook"></i></a></li>
+                <li><a href="https://www.whatsapp.com/?lang=es"target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+                <li><a href="https://outlook.live.com/owa/"target="_blank"><i class="bi bi-envelope-fill"></i></a></li>
             </ul>
         </div>
         <div class="box-copyright">
