--- a/pages/queHacemos.html
+++ b/pages/queHacemos.html
@@ -80,8 +80,7 @@
             </div>
 
             <div class="box-parrafo-subtitulo">
-                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam neque dolorem totam omnis hic illum ducimus aspernatur praesentium dolorum, suscipit, assumenda nobis enim autem quibusdam sunt quis itaque id accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime cumque recusandae ratione culpa fugiat inventore eligendi consectetur, reiciendis tempore repellat quam quas delectus explicabo minima vero! Reprehenderit explicabo vel consectetur. 
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia cum eaque laudantium odio impedit alias, ea hic soluta incidunt, fugit voluptatibus! Nemo incidunt, quo possimus delectus corrupti similique quod numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laudantium fugiat vel, excepturi repudiandae sit nostrum hic alias. Eum sunt eius assumenda ut, accusamus quidem quibusdam excepturi eveniet eos quis!</p>
+                 <p>Cuarzo es una de las principales empresas constructoras de la región con obras de arquitectura e ingeniería. Se especializa en la construcción, gerenciamiento, asistencia técnica y control de obras civiles, plantas industriales y desarrollos inmobiliarios. Empresa líder en los principales segmentos del mercado, incluidos sectores del turismo, salud, educación, comercio, cultura, entre otros. Nuestro equipo aporta en cada proyecto su conocimiento técnico y experiencia, para ofrecerle  al cliente un trabajo diferencial y eficiente. Cuarzo busca cumplir con sus trabajos garantizando una gestión segura, confiable y que cumpla con los niveles más altos de calidad.</p>
             </div>
             
             <div>
@@ -94,10 +93,10 @@
     <footer>
         <div class="box-menu-footer">
             <ul class="redes-sociales-footer">
-                <li><a href=""><i class="bi bi-instagram"></i></a></li>
-                <li><a href=""><i class="bi bi-facebook"></i></a></li>
-                <li><a href=""><i class="bi bi-whatsapp"></i></a></li>
-                <li><a href=""><i class="bi bi-envelope-fill"></i></a></li>
+                <li><a href="https://www.instagram.com/"target="_blank"><i class="bi bi-instagram"></i></a></li>
+                <li><a href="https://es-la.facebook.com/"target="_blank"><i class="bi bi-facebook"></i></a></li>
+                <li><a href="https://www.whatsapp.com/?lang=es"target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+                <li><a href="https://outlook.live.com/owa/"target="_blank"><i class="bi bi-envelope-fill"></i></a></li>
             </ul>
         </div>
         <div class="box-copyright">
