--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -146,10 +146,10 @@
     <footer>
         <div class="box-menu-footer">
             <ul class="redes-sociales-footer">
-                <li><a href=""><i class="bi bi-instagram"></i></a></li>
-                <li><a href=""><i class="bi bi-facebook"></i></a></li>
-                <li><a href=""><i class="bi bi-whatsapp"></i></a></li>
-                <li><a href=""><i class="bi bi-envelope-fill"></i></a></li>
+              <li><a href="https://www.instagram.com/"target="_blank"><i class="bi bi-instagram"></i></a></li>
+              <li><a href="https://es-la.facebook.com/"target="_blank"><i class="bi bi-facebook"></i></a></li>
+              <li><a href="https://www.whatsapp.com/?lang=es"target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+              <li><a href="https://outlook.live.com/owa/"target="_blank"><i class="bi bi-envelope-fill"></i></a></li>
             </ul>
         </div>
         <div class="box-copyright">
