Se agrego meta description, se cambiaron los lorems por texto real y se establecion los links para ig,face,wpp y mail

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="35 años siendo líderes en el mercado. Profesionales capacitados y servicio de calidad. Obras comerciales, industriales, residenciales, institucionales e infraesrtuctura.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,400;0,700;1,200&display=swap" rel="stylesheet">
